<!--
  ~ Copyright (c) 2021/  4/ 14.  Created by Hashim Tahir
  -->

<resources>
    <string name="app_name">Biometric Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="use_biometrics_to_login">Use biometrics to login</string>
    <string name="enable_biometric_login">Enable biometric login</string>
    <string name="desc_biometrics_authorization">Enter your login ID and password to confirm activation of Biometric Login.</string>
    <string name="cancel">Cancel</string>
    <string name="authorize">Authorize</string>
    <string name="prompt_info_title">%s Authentication</string>
    <string name="prompt_info_subtitle">Please login to get access</string>
    <string name="prompt_info_use_app_password">Use app password</string></resources>